projects/examples/source/02.01.06.cpp
//////////////////////////////////////

int main()
{
    [[maybe_unused]] auto const x = 1;

//  ----------------------------------

//	x = 2; // error
}

//////////////////////////////////////